src/test/ui/terminal-width/whitespace-trimming-2.rs

fn foo() -> usize {
                                                                                                                                                                                          ()
//~^ ERROR mismatched types
}

fn main() {}
